<resources>
    <string name="app_name">Organizer</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="metric_imperial">Metric/Imperial</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="gallon">gallon</string>
    <string name="liter">liter</string>
    <string name="lb">lb</string>
    <string name="kg">kg</string>
    <string name="f">F°</string>
    <string name="c">C°</string>
    <string name="ml">ml</string>
    <string name="fl_oz_us">fl oz(US)</string>
    <string name="oz">oz</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="milliliters">Milliliters</string>
    <string name="celsius">Celsius</string>
    <string name="gallons">Gallons</string>
    <string name="liters">Liters</string>
    <string name="kilograms">Kilograms</string>
    <string name="pounds">Pounds</string>
    <string name="gal">gal</string>
    <string name="l">L</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="km">km</string>
    <string name="mi">mi</string>
    <string name="ft">ft</string>
    <string name="m">m</string>
    <string name="meters">Meters</string>
    <string name="feet">Feet</string>
    <string name="centimeters">Centimeters</string>
    <string name="inches">Inches</string>
    <string name="cm">cm</string>
    <string name="in">in</string>
    <string name="foz">foz</string>
    <string name="fluid_ounces">Fluid Ounces</string>
    <string name="ounces">Ounces</string>
    <string name="g">g</string>
    <string name="grams">Grams</string>
    <string name="metric_tons">Metric Tons</string>
    <string name="us_tons">US Tons</string>
    <string name="t">t</string>
    <string name="us_t">US t</string>
    <string name="time_converter">Time Converter</string>
    <string name="time">Time</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="months_label">months</string>
    <string name="years_label">years</string>
    <string name="total_months">Total Months</string>
    <string name="weeks">Weeks</string>
    <string name="weeks_label">weeks</string>
    <string name="total_weeks">Total Weeks</string>
</resources>
