<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeConverter">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="729dp"
        android:focusableInTouchMode="true">

<!--        Month + Week = Total Weeks-->
        <!--<EditText
            android:id="@+id/total_weeks_tv"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/total_weeks"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="15"
            android:tag="total_weeks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/months_tv" />

        <EditText
            android:id="@+id/months_tv"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/months"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="15"
            android:tag="month_to_weeks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_months_tv" />

        <EditText
            android:id="@+id/extra_weeks_tv"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="64dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/weeks"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_months_tv" />

        <TextView
            android:id="@+id/weeks_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="184dp"
            android:hint="@string/weeks_label"
            app:layout_constraintStart_toEndOf="@+id/extra_weeks_tv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/months_label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="184dp"
            android:hint="@string/months_label"
            app:layout_constraintStart_toEndOf="@+id/months_tv"
            app:layout_constraintTop_toTopOf="parent" />-->

<!--        Year + Month = Total Months-->
        <EditText
            android:id="@+id/total_months_tv"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/total_months"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="15"
            android:tag="total_months"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/years_tv" />

        <EditText
            android:id="@+id/years_tv"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/years"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="15"
            android:tag="year_to_months"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_tv" />

        <EditText
            android:id="@+id/extra_months_tv"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="64dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/months"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="15"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_tv" />

        <TextView
            android:id="@+id/years_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:text="@string/years_label"
            app:layout_constraintStart_toEndOf="@+id/years_tv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/months_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:hint="@string/months_label"
            app:layout_constraintStart_toEndOf="@+id/extra_months_tv"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Time Header-->
        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/time"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
